# opengl-solarSystem

./: CMakeLists.txt  LICENSE  README.md  flake.nix
.cache/clangd/index/: camera.cpp.764193F44A72A457.idx  camera.h.3F00F57E88A090F7.idx  common.h.2C6FD2B37EB9C425.idx  glad.c.E91A34E176576AFC.idx  main.cpp.39071AEEEA85DB99.idx  shader.cpp.845560944AAA6DDF.idx  shader.h.23DF928293BFEA58.idx  stb_image.cpp.E68028F376A2D6BC.idx  stb_image.h.846BDE7B054B7DD2.idx
.direnv/: flake-profile-1-link
include/: camera.h  common.h  glad.h  orbitOutline.h  planet.h  planetRing.h  satellite.h  shader.h  skybox.h  solarSystem.h  sphere.h
lib/glad/: glad.c
lib/gladF/: glad.c
lib/imgui/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt
src/: camera.cpp  common.cpp  main.cpp  orbitOutline.cpp  planet.cpp  planetRing.cpp  satellite.cpp  shader.cpp  skybox.cpp  solarSystem.cpp  sphere.cpp
src/ShadersGLSL/: PlanetRingShader.frag  PlanetRingShader.vert  depthShader.frag  depthShader.geom  lightShader.frag  lightShader.vert  orbitShader.frag  satelliteShader.frag  satelliteShader.vert  shaderLightSource.frag  shaderLightSource.vert  sunShader.frag  sunShader.vert
